# rust-mcp

./: Cargo.toml
src/: book_server.rs
